--- a/pages/index.html
+++ b/pages/index.html
@@ -76,11 +76,11 @@
 
                         <div class="slider border_radius_big">  
 
-                                <img src="../images/game/screenshots/battle_city.png" alt="">
-                                <img src="../images/game/screenshots/menu.png" alt=""> 
-                                <img src="../images/game/screenshots/map_tile_white.png" alt="">
-                                <img src="../images/game/screenshots/battle_net_cyber_girl.png" alt="">
-                                <img src="../images/game/screenshots/battle_net_menu_cyber_girl.png" alt="">
+                                <img src="../images/game/screenshots/battle_city.webp" alt="">
+                                <img src="../images/game/screenshots/menu.webp" alt=""> 
+                                <img src="../images/game/screenshots/map_tile_white.webp" alt="">
+                                <img src="../images/game/screenshots/battle_net_cyber_girl.webp" alt="">
+                                <img src="../images/game/screenshots/battle_net_menu_cyber_girl.webp" alt="">
 
                         </div>  
 
