--- a/pages/skills.html
+++ b/pages/skills.html
@@ -775,13 +775,13 @@
     <td class='Name'><span>Bio Recharge</span></td>
     <td class='Type'><span><img class='icon_type' src='../images/game/icons/types/Cybernetic.png' alt=''></span></td>
 
-    <td class='Damage'><span>+TP</span></td>
+    <td class='Damage'><span></span></td>
     <td class='Effect'>
         <span class='SPD'><!-- Act first, Act last --></span>
         <span class='React'></span>
         <span class='Critical'><!-- ?% critical chance --></span>
         <span class='State'></span>
-        <span class='Recover'></span>
+        <span class='Recover'>+TP</span>
         <span class='Drain'></span>
         <span class='Call'></span>
         <span class='Union'></span>
@@ -1711,13 +1711,13 @@ sistema operacional não consegue armazenar determinado arquivo de uma vez só. 
     <td class='Name'><span>Nano Repair</span></td>
     <td class='Type'><span><img class='icon_type' src='../images/game/icons/types/Machine.png' alt=''></span></td>
 
-    <td class='Damage'><span>+HP</span></td>
+    <td class='Damage'><span></span></td>
     <td class='Effect'>
         <span class='SPD'><!-- Act first, Act last --></span>
         <span class='React'></span>
         <span class='Critical'><!-- ?% critical chance --></span>
         <span class='State'></span>
-        <span class='Recover'></span>
+        <span class='Recover'>+HP</span>
         <span class='Drain'></span>
         <span class='Call'></span>
         <span class='Union'></span>
@@ -1894,13 +1894,13 @@ sistema operacional não consegue armazenar determinado arquivo de uma vez só. 
     <td class='Name'><span>Repair</span></td>
     <td class='Type'><span><img class='icon_type' src='../images/game/icons/types/Cybernetic.png' alt=''></span></td>
 
-    <td class='Damage'><span>+INT•HP</span></td>
+    <td class='Damage'><span></span></td>
     <td class='Effect'>
         <span class='SPD'><!-- Act first, Act last --></span>
         <span class='React'></span>
         <span class='Critical'><!-- ?% critical chance --></span>
         <span class='State'></span>
-        <span class='Recover'></span>
+        <span class='Recover'>+INT•HP</span>
         <span class='Drain'></span>
         <span class='Call'></span>
         <span class='Union'></span>
@@ -2106,13 +2106,13 @@ sistema operacional não consegue armazenar determinado arquivo de uma vez só. 
     <td class='Name'><span>Steel Bond</span></td>
     <td class='Type'><span><img class='icon_type' src='../images/game/icons/types/Fire.png' alt=''><img class='icon_type' src='../images/game/icons/types/Machine.png' alt=''></span></td>
 
-    <td class='Damage'><span>+HP</span></td>
+    <td class='Damage'><span></span></td>
     <td class='Effect'>
         <span class='SPD'><!-- Act first, Act last --></span>
         <span class='React'></span>
         <span class='Critical'><!-- ?% critical chance --></span>
         <span class='State'></span>
-        <span class='Recover'></span>
+        <span class='Recover'>+HP</span>
         <span class='Drain'></span>
         <span class='Call'></span>
         <span class='Union'></span>
@@ -2178,13 +2178,13 @@ sistema operacional não consegue armazenar determinado arquivo de uma vez só. 
     <td class='Name'><span>Testa Recharge</span></td>
     <td class='Type'><span><img class='icon_type' src='../images/game/icons/types/Machine.png' alt=''></span></td>
 
-    <td class='Damage'><span>+AP</span></td>
+    <td class='Damage'><span></span></td>
     <td class='Effect'>
         <span class='SPD'><!-- Act first, Act last --></span>
         <span class='React'></span>
         <span class='Critical'><!-- ?% critical chance --></span>
         <span class='State'></span>
-        <span class='Recover'></span>
+        <span class='Recover'>+AP</span>
         <span class='Drain'></span>
         <span class='Call'></span>
         <span class='Union'></span>
@@ -2363,7 +2363,7 @@ sistema operacional não consegue armazenar determinado arquivo de uma vez só. 
     -->
 
     <script defer src="../hi-techCore/scripts/defaults.js"></script>
-    <script async src="../hi-techCore/scripts/development.js"></script>
+    <script async src="../../Development/script.js"></script>
     <script defer src="../scripts/identity.js"></script>
     
 </body> 
