--- a/pages/types.html
+++ b/pages/types.html
@@ -2943,7 +2943,7 @@
     -->
 
     <script defer src="../hi-techCore/scripts/defaults.js"></script>
-    <script async src="../hi-techCore/scripts/development.js"></script>
+    <script async src="../../Development/script.js"></script>
     <script defer src="../scripts/identity.js"></script>
 
 </body> 
