--- a/hi-techCore/pages/index.html
+++ b/hi-techCore/pages/index.html
@@ -182,10 +182,10 @@
                         áãàâ éê í óõô ú ªº -/:;()[]{}$&@“".,?!'`#%*+=_\|~&lt;>•
 
                         <span style="color: deepSkyBlue; font-size: inherit;">Tech OP - Cyber - Hi-Tech Core</span> 
-                        Set in a futuristic high-tech world, the player will have to face different challenges throughout his adventure to complete his objective.
+                        Set in a futuristic high-tech world, the player will have to face different challenges throughout his adventure to <span style="font-weight: bold;">complete</span> his objective.
                     </p>
 
-                    <p style="font-family: 'Cyber-BoldBook'; font-size: 14px; text-shadow: 1px 0px 0px; line-height: 1.8; text-align: inherit;">
+                    <p style="font-family: 'Cyber-BoldBook'; font-size: 14px; text-shadow: 0px 0px 0px; line-height: 1.8; text-align: inherit;">
                         Cyber-BoldBook (CSS Bold) - ?px
                         0123456789 
                         abcdefghijklmn opqrstuvwxyz 
@@ -193,7 +193,7 @@
                         áãàâ éê í óõô ú ªº -/:;()[]{}$&@“".,?!'`#%*+=_\|~&lt;>•
 
                         <span style="color: deepSkyBlue;">Tech OP - Cyber - Hi-Tech Core</span> 
-                        Set in a futuristic high-tech world, the player will have to face different challenges throughout his adventure to complete his objective.
+                        Set in a futuristic high-tech world, the player will have to face different challenges throughout his adventure to <span style="text-shadow: 1px 0px 0px;">complete</span> his objective.
                     </p>
                 </div>
 
