--- a/hi-techCore/pages/index.html
+++ b/hi-techCore/pages/index.html
@@ -9,6 +9,7 @@
     <meta name="description" content="Descrição da página. Especificar uma descrição que inclua palavras-chave relacionadas ao conteúdo da página pode ajudar a tornar a página mais alta nas pesquisas realizadas nos mecanismos de busca.">
     <link rel="shortcut icon" href="../images/favicon.ico" type="image/x-icon">
 
+    <link href='../styles/css/downloadFonts.css' rel='stylesheet'>  
     <link href='../styles/css/normalize.css' rel='stylesheet'>  
     <link href='../styles/css/gmes_normalize.css' rel='stylesheet'>
     <link href='../styles/css/defaults.css' rel='stylesheet'><!---->
