--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <!--<meta name = "apple-mobile-web-app-title" content = "App Name">
     <meta name="author" content="George Maxwell">-->
+    <link href='../styles/css/downloadFonts.css' rel='stylesheet'>  
 </head>
 <body>
 
