--- a/hi-techCore/pages/index.html
+++ b/hi-techCore/pages/index.html
@@ -183,7 +183,7 @@
                         áãàâ éê í óõô ú ªº -/:;()[]{}$&@“".,?!'`#%*+=_\|~&lt;>•
 
                         <span style="color: deepSkyBlue; font-size: inherit;">Tech OP - Cyber - Hi-Tech Core</span> 
-                        Set in a futuristic high-tech world, the player will have to face different challenges throughout his adventure to <span style="font-weight: bold;">complete</span> his objective.
+                        Set in a futuristic high-tech world, the player will have to face different challenges throughout his adventure to <span style="font-weight: bold; font-size: inherit;">complete</span> his objective.
                     </p>
 
                     <p style="font-family: 'Cyber-BoldBook'; font-size: 14px; text-shadow: 0px 0px 0px; line-height: 1.8; text-align: inherit;">
@@ -194,7 +194,7 @@
                         áãàâ éê í óõô ú ªº -/:;()[]{}$&@“".,?!'`#%*+=_\|~&lt;>•
 
                         <span style="color: deepSkyBlue;">Tech OP - Cyber - Hi-Tech Core</span> 
-                        Set in a futuristic high-tech world, the player will have to face different challenges throughout his adventure to <span style="text-shadow: 1px 0px 0px;">complete</span> his objective.
+                        Set in a futuristic high-tech world, the player will have to face different challenges throughout his adventure to <span style="text-shadow: 0.5px 0px 0px, 1px 0px 0px;">complete</span> his objective.
                     </p>
                 </div>
 
