--- a/hi-techCore/pages/index.html
+++ b/hi-techCore/pages/index.html
@@ -80,13 +80,13 @@
                         áãàâ éê í óõô ú ªº -/:;()[]{}$&@“".,?!'`#%*+=_\|~&lt;>•
 
                         <span style="color: deepSkyBlue;">Tech OP - Cyber - Hi-Tech Core</span> 
-                        Set in a futuristic high-tech world, the player will have to face different challenges throughout his adventure to <span style="text-shadow: 0.5px 0px 0px, 1px 0px 0px;">complete</span> his objective.
+                        Set in a futuristic high-tech world, the player will have to face different challenges throughout his adventure to <span style="text-shadow: 0.5px 0px 0px, 1px 0px 0px, 1.5px 0px 0px;">complete</span> his objective.
                     </p>
                 </div>
 
                 <div class="lb36"></div>
 
-                
+
 
                 <h2>Índice</h2>
 
