--- a/hi-techCore/pages/index.html
+++ b/hi-techCore/pages/index.html
@@ -63,10 +63,9 @@
                 <div style="white-space: pre-line; text-align: left;">
                     <p style="font-family: 'Times New Roman'; font-size: 19px; text-align: inherit;">
                         Times New Roman - 19px
-                        0123456789 
                         abcdefghijklmn opqrstuvwxyz 
                         ABCDEFGHIJKLMN OPQRSTUVWXYZ 
-                        áãàâ éê í óõô ú ªº -/:;()[]{}$&@“".,?!'`#%*+=_\|~&lt;>•
+                        0123456789 áãàâ éê í óõô ú ªº -/:;()[]{}$&@“".,?!'`#%*+=_\|~&lt;>•
 
                         <span style="color: deepSkyBlue; font-size: inherit;">Tech OP - Cyber - Hi-Tech Core</span> 
                         Set in a futuristic high-tech world, the player will have to face different challenges throughout his adventure to <span style="font-weight: bold; font-size: inherit;">complete</span> his objective.
@@ -74,10 +73,9 @@
 
                     <p style="font-family: 'Cyber-BoldBook'; font-size: 14px; text-shadow: 0px 0px 0px; line-height: 1.8; text-align: inherit;">
                         Cyber-BoldBook (CSS Bold) - ?px
-                        0123456789 
                         abcdefghijklmn opqrstuvwxyz 
                         ABCDEFGHIJKLMN OPQRSTUVWXYZ 
-                        áãàâ éê í óõô ú ªº -/:;()[]{}$&@“".,?!'`#%*+=_\|~&lt;>•
+                        0123456789 áãàâ éê í óõô ú ªº -/:;()[]{}$&@“".,?!'`#%*+=_\|~&lt;>•
 
                         <span style="color: deepSkyBlue;">Tech OP - Cyber - Hi-Tech Core</span> 
                         Set in a futuristic high-tech world, the player will have to face different challenges throughout his adventure to <span style="text-shadow: 0.5px 0px 0px, 1px 0px 0px, 1.5px 0px 0px;">complete</span> his objective.
