--- a/hi-techCore/pages/index.html
+++ b/hi-techCore/pages/index.html
@@ -71,14 +71,14 @@
                         Set in a futuristic high-tech world, the player will have to face different challenges throughout his adventure to <span style="font-weight: bold; font-size: inherit;">complete</span> his objective.
                     </p>
 
-                    <p style="font-family: 'Cyber-BoldBook'; font-size: 14px; text-shadow: 0.5px 0px 0px; line-height: 1.8; text-align: inherit;">
+                    <p style="font-family: 'Cyber-BoldBook'; font-size: 14px; text-shadow: 0.4px 0px 0px; line-height: 1.8; text-align: inherit;">
                         Cyber-BoldBook (CSS Bold) - ?px
                         abcdefghijklmn opqrstuvwxyz 
                         ABCDEFGHIJKLMN OPQRSTUVWXYZ 
                         0123456789 áãàâ éê í óõô ú ªº -/:;()[]{}$&@“".,?!'`#%*+=_\|~&lt;>•
 
                         <span style="color: deepSkyBlue;">Tech OP - Cyber - Hi-Tech Core</span> 
-                        Set in a futuristic high-tech world, the player will have to face different challenges throughout his adventure to <span style="text-shadow: 0.5px 0px 0px, 1px 0px 0px, 1.5px 0px 0px;">complete</span> his objective.
+                        Set in a futuristic high-tech world, the player will have to face different challenges throughout his adventure to <span style="text-shadow: 0.5px 0px 0px, 1px 0px 0px, 1.5px 0px 0px, 2px 0px 0px;">complete</span> his objective.
                     </p>
                 </div>
 
