--- a/hi-techCore/pages/index.html
+++ b/hi-techCore/pages/index.html
@@ -82,6 +82,8 @@
                     </p>
                 </div>
 
+                <p style="font-family: 'Cyber-BoldBook'; font-size: 48px; text-shadow: 0.3px 0px 0px; line-height: 1.8; text-align: center; color: deepSkyBlue;">Cyber</p>
+
                 <div class="lb36"></div>
 
 
