--- a/hi-techCore/pages/index.html
+++ b/hi-techCore/pages/index.html
@@ -71,7 +71,7 @@
                         Set in a futuristic high-tech world, the player will have to face different challenges throughout his adventure to <span style="font-weight: bold; font-size: inherit;">complete</span> his objective.
                     </p>
 
-                    <p style="font-family: 'Cyber-BoldBook'; font-size: 14px; text-shadow: 0.3px 0px 0px; line-height: 1.8; text-align: inherit;">
+                    <p style="font-family: 'Cyber-BoldBook'; font-size: 14px; text-shadow: 0.2px 0px 0px; line-height: 1.8; text-align: inherit;">
                         Cyber-BoldBook (CSS Bold) - ?px
                         abcdefghijklmn opqrstuvwxyz 
                         ABCDEFGHIJKLMN OPQRSTUVWXYZ 
@@ -82,7 +82,8 @@
                     </p>
                 </div>
 
-                <p style="font-family: 'Cyber-BoldBook'; font-size: 48px; text-shadow: 0.3px 0px 0px; line-height: 1.8; text-align: center; color: deepSkyBlue;">Cyber</p>
+                <p style="font-family: 'Cyber-BoldBook'; font-size: 48px; text-shadow: 0.3px 0px 0px; line-height: 1.8; text-align: center; color: deepSkyBlue; margin: 0;">Cyber</p>
+                <p style="font-family: 'Times New Roman'; font-size: 48px; text-shadow: 0.3px 0px 0px; line-height: 1.8; text-align: center; color: deepSkyBlue; margin: 0;">Cyber</p>
 
                 <div class="lb36"></div>
 
