--- a/hi-techCore/pages/index.html
+++ b/hi-techCore/pages/index.html
@@ -60,32 +60,51 @@
 
             <div class="central">
 
+                <style>
+
+                    .TNR {
+                        font-family: 'Times New Roman'; 
+                        font-size: 19px;
+                    }
+
+                </style>
+
+                <div style="border: 1px solid; margin-top: 16px; margin-bottom: 16px;">
+                    <p>Cyber-BoldBook - Altura de 97px (que é a altura original da minha fonte):</p>
+                    <p style="font-family: 'Cyber-BoldBook'; font-size: 139px; text-align: center; margin: 0;">Cyber</p>
+                </div>
+
+                <div style="text-align: center;">
+                    <p class="TNR" style="display: inline-block; margin: 0;">o M</p> -
+                    <p style="font-family: 'Myfont-Regular'; font-size: 19px; display: inline-block; margin: 0;">o</p> -
+                    <p style="font-family: 'Cyber-BoldBook'; font-size: 14px; display: inline-block; margin: 0;">o</p>
+                </div>
+
                 <div style="white-space: pre-line; text-align: left;">
-                    <p style="font-family: 'Times New Roman'; font-size: 19px; text-align: inherit;">
+                    <p class="TNR" style="text-align: inherit; display: none;">
                         Times New Roman - 19px
                         abcdefghijklmn opqrstuvwxyz 
                         ABCDEFGHIJKLMN OPQRSTUVWXYZ 
                         0123456789 áãàâ éê í óõô ú ªº -/:;()[]{}$&@“".,?!'`#%*+=_\|~&lt;>•
 
                         <span style="color: deepSkyBlue; font-size: inherit;">Tech OP - Cyber - Hi-Tech Core</span> 
-                        Set in a futuristic high-tech world, the player will have to face different challenges throughout his adventure to <span style="font-weight: bold; font-size: inherit;">complete</span> his objective.
+                        In a futuristic high-tech world, the player will have to face different challenges throughout his adventure to <span style="font-weight: bold; font-size: inherit;">complete</span> his objective.
                     </p>
 
                     <p style="font-family: 'Cyber-BoldBook'; font-size: 14px; text-shadow: 0.2px 0px 0px; line-height: 1.8; text-align: inherit;">
-                        Cyber-BoldBook (CSS Bold) - ?px
+                        Cyber-BoldBook - ?px
                         abcdefghijklmn opqrstuvwxyz 
                         ABCDEFGHIJKLMN OPQRSTUVWXYZ 
                         0123456789 áãàâ éê í óõô ú ªº -/:;()[]{}$&@“".,?!'`#%*+=_\|~&lt;>•
 
                         <span style="color: deepSkyBlue;">Tech OP - Cyber - Hi-Tech Core</span> 
-                        Set in a futuristic high-tech world, the player will have to face different challenges throughout his adventure to <span style="text-shadow: 0.5px 0px 0px, 1px 0px 0px, 1.5px 0px 0px, 2px 0px 0px;">complete</span> his objective.
+                        In a futuristic high-tech world, the player will have to face different challenges throughout his adventure to <span style="text-shadow: 0.5px 0px 0px, 1px 0px 0px, 1.5px 0px 0px, 2px 0px 0px;">complete</span> his objective.
                     </p>
                 </div>
 
                 <p style="font-family: 'Cyber-BoldBook'; font-size: 48px; text-shadow: 0.3px 0px 0px; line-height: 1.8; text-align: center; color: deepSkyBlue; margin: 0;">Cyber</p>
-                <p style="font-family: 'Times New Roman'; font-size: 48px; text-shadow: 0.3px 0px 0px; line-height: 1.8; text-align: center; color: deepSkyBlue; margin: 0;">Cyber</p>
 
-                <div class="lb36"></div>
+                <div class="lb26"></div>
 
 
 
