--- a/hi-techCore/pages/index.html
+++ b/hi-techCore/pages/index.html
@@ -63,9 +63,10 @@
                 <h2>Fonts</h2>
 
                 <p style="text-align: center;">
-                    <span class="TNR">M o</span>
+                    <span class="TNR">o</span>
                     <span class="Myfont-Regular">o</span>
                     <span class="Cyber-BoldBook" style="text-shadow: none;">o</span>
+                    <span class="Cyber-BoldBook">o</span>
                 </p>
 
                 <div class="TNR">
