--- a/hi-techCore/pages/index.html
+++ b/hi-techCore/pages/index.html
@@ -87,15 +87,23 @@
 
                 </div>
 
-                <div class="Myfont-Regular">
+                <div>
                     
                     <h3>Myfont-Regular</h3>
 
                     <div style="border: 1px solid black; overflow-x: auto;">
+                        
+                        <p class="Myfont-Regular" style="font-size: 19px; text-align: center; margin: 0; white-space: nowrap;">ABCDEFGHIJKLMNOPQRSTUVWXYZ</p>
+
+                        <p class="Myfont-Regular" style="font-size: 38px; text-align: center; margin: 0; white-space: nowrap;">ABCDEFGHIJKLMNOPQRSTUVWXYZ</p>
+
+                        <p class="Myfont-Regular" style="font-size: 57px; text-align: center; margin: 0; white-space: nowrap;">ABCDEFGHIJKLMNOPQRSTUVWXYZ</p>
+
+                        <p class="Myfont-Regular" style="font-size: 76px; text-align: center; margin: 0; white-space: nowrap;">ABCDEFGHIJKLMNOPQRSTUVWXYZ</p>
 
                         <p>Myfont-Regular - Altura de 97px (que é a altura original):</p>
 
-                        <p style="font-size: 193px; text-align: center; margin: 0; white-space: nowrap;">o</p>
+                        <p class="Myfont-Regular" style="font-size: 193px; text-align: center; margin: 0; white-space: nowrap;">ABCDEFGHIJKLMNOPQRSTUVWXYZ</p>
 
                     </div>
 
