--- a/hi-techCore/pages/index.html
+++ b/hi-techCore/pages/index.html
@@ -93,16 +93,31 @@
 
                     <div style="border: 1px solid black; overflow-x: auto;">
                         
+                        <p>font-size: 19px</p>
                         <p class="Myfont-Regular" style="font-size: 19px; text-align: center; margin: 0; white-space: nowrap;">ABCDEFGHIJKLMNOPQRSTUVWXYZ</p>
 
+                        <p>font-size: 28px</p>
+                        <p class="Myfont-Regular" style="font-size: 28px; text-align: center; margin: 0; white-space: nowrap;">ABCDEFGHIJKLMNOPQRSTUVWXYZ</p>
+
+                        <p>font-size: 38px</p>
                         <p class="Myfont-Regular" style="font-size: 38px; text-align: center; margin: 0; white-space: nowrap;">ABCDEFGHIJKLMNOPQRSTUVWXYZ</p>
 
+                        <p>font-size: 48px</p>
+                        <p class="Myfont-Regular" style="font-size: 48px; text-align: center; margin: 0; white-space: nowrap;">ABCDEFGHIJKLMNOPQRSTUVWXYZ</p>
+
+                        <p>font-size: 57px</p>
                         <p class="Myfont-Regular" style="font-size: 57px; text-align: center; margin: 0; white-space: nowrap;">ABCDEFGHIJKLMNOPQRSTUVWXYZ</p>
 
+                        <p>font-size: 76px</p>
                         <p class="Myfont-Regular" style="font-size: 76px; text-align: center; margin: 0; white-space: nowrap;">ABCDEFGHIJKLMNOPQRSTUVWXYZ</p>
 
-                        <p>Myfont-Regular - Altura de 97px (que é a altura original):</p>
+                        <p>font-size: 114px</p>
+                        <p class="Myfont-Regular" style="font-size: 114px; text-align: center; margin: 0; white-space: nowrap;">ABCDEFGHIJKLMNOPQRSTUVWXYZ</p>
 
+                        <p>font-size: 152px</p>
+                        <p class="Myfont-Regular" style="font-size: 152px; text-align: center; margin: 0; white-space: nowrap;">ABCDEFGHIJKLMNOPQRSTUVWXYZ</p>
+
+                        <p>font-size: 193px - Altura de 97px (que é a altura original):</p>
                         <p class="Myfont-Regular" style="font-size: 193px; text-align: center; margin: 0; white-space: nowrap;">ABCDEFGHIJKLMNOPQRSTUVWXYZ</p>
 
                     </div>
