--- a/hi-techCore/pages/index.html
+++ b/hi-techCore/pages/index.html
@@ -228,7 +228,7 @@ font-size: 43px;
                     </div>
 
                 </div>
-                
+
                 <div class="lb26"></div>
 
 
@@ -442,13 +442,18 @@ font-size: 43px;
 
                 <ul>
                     <li>Item 1</li>
-                    <li>Item 2 - Lista:
+                    <li>Item 2
                         <ul class="spaced_items">
                             <li>Item 2.1</li>
                             <li>Item 2.2</li>
-                            <li>Item 2.3 - Lista:
+                            <li>Item 2.3
                                 <ul>
-                                    <li>Item 2.3.1</li>
+                                    <li>Item 2.3.1
+                                        <ul>
+                                            <li>Item 2.3.1.1</li>
+                                            <li>Item 2.3.1.2</li>
+                                        </ul>
+                                    </li>
                                     <li>Item 2.3.2</li>
                                 </ul>
                             </li>
