--- a/pages/index.html
+++ b/pages/index.html
@@ -156,6 +156,8 @@
 
                 <hr class="hidden">
 
+                <div class="lb2"></div>
+
                 <section>
 
                     <h3 class="hidden">More information</h3>
