--- a/pages/skills.html
+++ b/pages/skills.html
@@ -334,7 +334,7 @@
                 <div class="lb"></div>
 
                  
-                <ul class="skills_data_switchs_box list_only_markup">
+                <ul class="skills_data_switchs_box noListStyle">
 
                     <li>
                         <div class="switch button_text pill" onclick="F_skills_data_all_switch(this); switch_event(this)">
