--- a/hi-techCore/pages/index.html
+++ b/hi-techCore/pages/index.html
@@ -276,7 +276,7 @@ font-size: 43px;
                     <tr><th>Tipos de caracteres</th><td>
 
                         <ul class="list_compressed" style="text-align: left; margin-top: 4px; margin-bottom: 4px;">
-                            <li><span style="font-weight: bold;">NASMLOPTQYXúmeros: </span><span class="check_yes"></span><span style="white-space: pre;"> L</span></li>
+                            <li><span style="font-weight: bold;">Números: </span><span class="check_yes">Yes</span></li>
                             <li><span style="font-weight: bold;">Minúsculas: </span><span class="check_no"></span></li>
                             <li><span style="font-weight: bold;">Maiúsculas: </span><span>✓𐄂</span></li>
                             <li><span style="font-weight: bold;">Especiais: </span><span>✓</span></li>
