--- a/hi-techCore/pages/index.html
+++ b/hi-techCore/pages/index.html
@@ -279,7 +279,7 @@ font-size: 43px;
                             <li><span style="font-weight: bold;">Números: </span><span class="check_yes">Yes</span></li>
                             <li><span style="font-weight: bold;">Minúsculas: </span><span class="check_no">No</span></li>
                             <li><span style="font-weight: bold;">Maiúsculas: </span><span><span class="check_yes">Yes</span></span></li>
-                            <li><span style="font-weight: bold;">Especiais: </span><span class="check_yes">Yes</span></li>
+                            <li><span style="font-weight: bold;">Especiais: </span><span class="check_yes">Yes</span><span class="check_no">No</span></li>
                         </ul>
 
                     </td></tr>
