--- a/hi-techCore/pages/index.html
+++ b/hi-techCore/pages/index.html
@@ -325,11 +325,11 @@ font-size: 43px;
 
 
 
-                <p>Aqui temos um elemento <a id="quoting" href="#quoted" class="jump">X &lt;a> com a classe <span class="underline">jump</span>  citando um elemento</a> mais embaixo.</p> 
+                <p>Aqui temos um elemento <a id="quoting" href="#quoted" class="jump">&lt;a> com a classe jump  citando um elemento</a> mais embaixo.</p> 
 
                 <div class="lb100"></div>
 
-                <p>Aqui temos um elemento <a id="quoted" href="#quoting" class="jump">&lt;a> com a classe <span class="underline">jump</span>  sendo citado por um elemento</a> mais em cima.</p>
+                <p>Aqui temos um elemento <a id="quoted" href="#quoting" class="jump">&lt;a> com a classe jump  sendo citado por um elemento</a> mais em cima.</p>
 
 Texto corrente citado.
 
