--- a/hi-techCore/pages/index.html
+++ b/hi-techCore/pages/index.html
@@ -466,6 +466,11 @@ Texto corrente citado.
                     diam, voluptua invidunt <kbd>Enter</kbd> duo dolor voluptua voluptua et kasd. Vero et at 
                     magna tempor justo eirmod. Ea est sadipscing no kasd ut diam sadipscing.</p>
 
+                <p class="alert">Este parágrafo contém a classe alerta para usar em parágrafos com informações extremamente importantes. 
+                    <br><br>
+                    Esta segunda linha é apenas para amostra.
+                </p>
+
                 <p>&lt;abbr>: Usamos <abbr title="Hypertext Markup Language" onclick="lightbox(`Hypertext Markup Language`)">HTML</abbr> para estruturar nossos documentos da web.</p>
 
                 <p>&lt;dfn>: <dfn>Firefox</dfn> é o navegador criado pela Fundação Mozilla.</p>
