--- a/hi-techCore/pages/index.html
+++ b/hi-techCore/pages/index.html
@@ -2,12 +2,12 @@
 <html lang="pt-br"> <!-- en -->
 <head>
     <meta charset="utf-8">
-    <title>Site Title</title>
-    <meta name = "apple-mobile-web-app-title" content = "App Name">
+    <title>Hi-Tech Core</title>
+    <meta name = "apple-mobile-web-app-title" content = "Hi-Tech Core"><!-- App Name --> 
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="author" content="George Maxwell">
     <meta name="description" content="Descrição da página. Especificar uma descrição que inclua palavras-chave relacionadas ao conteúdo da página pode ajudar a tornar a página mais alta nas pesquisas realizadas nos mecanismos de busca.">
-    <link rel="shortcut icon" href="../images/favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="../images/icons/favicon.ico" type="image/x-icon">
     <link rel="apple-touch-icon" href="../apple-touch-icon.png">
 
     <link href='../styles/css/downloadFonts.css' rel='stylesheet'>  
@@ -63,13 +63,24 @@
 
                 <h2>Testes</h2>
 
-                <p><a class="textIcon_link" href="https://www.google.com.br">Link externo</a></p>
-
-                <p><a class="textIcon_popUp" href="#" onclick="alert(`Eu tenho a classe 'textIcon_popUp' para indicar que sou um texto clicável.`)">Clique aqui!</a></p> 
+                <p>Acesse o <a class="textIcon_link" href="https://developer.mozilla.org/en-US/">site do MDN</a> para aprender HTML, CSS, JS.</p>
 
                 <p>Aqui temos um <a id="quoting" class="textIcon_chain" href="#quoted"> elemento &lt;a> citando um elemento</a> mais embaixo.</p> 
 
-                <p>&lt;abbr>: Usamos <abbr title=""><a class="textIcon_popUp" href="#" onclick="lightbox(`Hypertext Markup Language`)" >HTML</a></abbr> para estruturar nossos documentos da web.</p>
+                <p>&lt;abbr>: Usamos <abbr title=""><a class="textIcon_info" href="#" onclick="lightbox(`Hypertext Markup Language`)" >HTML</a></abbr> para estruturar nossos documentos da web.</p>
+
+                <p>Contate o autor por <a href="mailto:contato@mozilla.org">contato@mozilla.org</a> ou <a href="tel:+6824258804">(68) 2425-8804</a> para obter mais informações.</p> 
+
+                <p>É necessário <a class="textIcon_download"download="filename" href="../pdf/text.pdf">baixar o arquivo (PDF, 10MB)</a> para iniciar o exemplo.</p>
+
+                <p><a class="textIcon_popUp" href="#" onclick="alert(`Eu tenho a classe 'textIcon_popUp' para indicar que sou um texto clicável.`)">Clique aqui!</a></p> 
+
+                <p><a href="../audios/exemplo.mp3">Ouça o áudio</a></p>
+
+                <p><a href="../videos/trailer.mp4">Assista ao vídeo (qualidade HD)</a></p>
+
+
+                
 
                 <h2>Fonts</h2>
 
