--- a/hi-techCore/pages/index.html
+++ b/hi-techCore/pages/index.html
@@ -69,16 +69,23 @@
 
                 <p>&lt;abbr>: Usamos <abbr title=""><a class="textIcon_info" href="#" onclick="lightbox(`Hypertext Markup Language`)" >HTML</a></abbr> para estruturar nossos documentos da web.</p>
 
-                <p>Contate o autor por <a href="mailto:contato@mozilla.org">contato@mozilla.org</a> ou <a href="tel:+6824258804">(68) 2425-8804</a> para obter mais informações.</p> 
+                <p>É necessário <a class="textIcon_download" download="filename.pdf" href="../pdf/text.pdf">baixar o arquivo (PDF, 10MB)</a> para iniciar o exemplo.</p>
 
-                <p>É necessário <a class="textIcon_download"download="filename" href="../pdf/text.pdf">baixar o arquivo (PDF, 10MB)</a> para iniciar o exemplo.</p>
+                <p>
+                    Contate o autor por 
+                    <a class="textIcon_email" href="mailto:contato@mozilla.org">contato@mozilla.org</a>
+                     ou 
+                     <a class="textIcon_phone" href="tel:+6824258804">(68) 2425-8804</a> 
+                     para obter mais informações.
+                    </p> 
 
+                <!-- 
                 <p><a class="textIcon_popUp" href="#" onclick="alert(`Eu tenho a classe 'textIcon_popUp' para indicar que sou um texto clicável.`)">Clique aqui!</a></p> 
 
                 <p><a href="../audios/exemplo.mp3">Ouça o áudio</a></p>
 
                 <p><a href="../videos/trailer.mp4">Assista ao vídeo (qualidade HD)</a></p>
-
+                -->
 
                 
 
@@ -5838,7 +5845,10 @@ font-size: 43px;
 
       textIcon_link
       textIcon_chain
-textIcon_popUp 
+      textIcon_info
+      textIcon_download
+      textIcon_email
+      textIcon_phone
 
     ────────────────────────────
     >> Icons (Alone)
