--- a/hi-techCore/pages/index.html
+++ b/hi-techCore/pages/index.html
@@ -318,7 +318,8 @@ font-size: 43px;
                 <!-- <p>Ícone L: <span class="textIcon_template noText"></span>.</p> -->
                 <p>Ícone L: <span class="textIcon_yes noText">Yes</span>.</p>
 
-                <p style="white-space: break-spaces;">Números: <span class="textIcon_yes noText">Yes</span></p>
+                <p>Números: <span class="textIcon_yes"></span></p>
+                <p>Números: <span class="textIcon_yes noText">Yes</span></p>
 
                 <p>Texto de ícone pro lado esquerdo:</p>
 
@@ -341,7 +342,7 @@ font-size: 43px;
                     <tr><th>Tipos de caracteres</th><td>
 
                         <ul class="list_compressed" style="text-align: left; margin-top: 4px; margin-bottom: 4px;">
-                            <li><span style="font-weight: bold;">Números: </span><span class="textIcon_yes noText">Yes</span>.</li>
+                            <li><span style="font-weight: bold;">Números: </span><span class="textIcon_yes noText">Yes</span></li>
                             <li><span style="font-weight: bold;">Minúsculas: </span><span class="textIcon_no noText">No</span></li>
                             <li><span style="font-weight: bold;">Maiúsculas: </span><span><span class="textIcon_yes noText">Yes</span></span></li>
                             <li><span style="font-weight: bold;">Especiais: </span><span class="textIcon_yes noText">Yes</span></li>
