--- a/hi-techCore/pages/index.html
+++ b/hi-techCore/pages/index.html
@@ -307,11 +307,11 @@ font-size: 43px;
 
 
 
+                <p>P: <span id="tt">S</span>.</p>
 
 
 
 
-                <p>Texto de ícone (o lado padrão é o esquerdo):</p>
 
                 <p>Ícone L: <span class="textIcon_table"></span>.</p>
                 <p>Ícone L: <span class="textIcon_image">Yes</span>.</p>
@@ -320,6 +320,14 @@ font-size: 43px;
 
                 <p>Números: <span class="textIcon_yes"></span></p>
                 <p>Números: <span class="textIcon_yes noText">Yes</span></p>
+
+
+                <p>Texto de ícone (o lado padrão é o esquerdo):</p>
+
+                <p>Ícone L: <span class="textIcon_template"></span>.</p>
+                <p>Ícone L: <span class="textIcon_template">Yes</span>.</p>
+                <!-- <p>Ícone L: <span class="textIcon_template noText"></span>.</p> -->
+                <p>Ícone L: <span class="textIcon_template noText">Yes</span>.</p>
 
                 <p>Texto de ícone pro lado esquerdo:</p>
 
