--- a/hi-techCore/pages/index.html
+++ b/hi-techCore/pages/index.html
@@ -89,7 +89,63 @@
                 <p>&lt;abbr>: Usamos <abbr title=""><button onclick="lightbox(`Hypertext Markup Language`)" >HTML</button></abbr> para estruturar nossos documentos da web.</p>
 
 
+
+                <p>Texto de ícone (o lado padrão é o esquerdo):</p>
+
+                <p>Ícone L: <span class="textIcon_template"></span>.</p>
+                <p>Ícone L: <span class="textIcon_template">Yes</span>.</p>
+                <!-- <p>Ícone L: <span class="textIcon_template noText"></span>.</p> -->
+                <p>Ícone L: <span class="textIcon_template noText">Yes</span>.</p>
+
+                <p>Texto de ícone pro lado esquerdo:</p>
+
+                <p>Ícone L: <span class="textIcon_template left"></span>.</p>
+                <p>Ícone L: <span class="textIcon_template left">Yes</span>.</p>
+                <!-- <p>Ícone L: <span class="textIcon_template left noText"></span>.</p> -->
+                <p>Ícone L: <span class="textIcon_template left noText">Yes</span>.</p>
+
+                <p>Texto de ícone pro lado direito:</p>
+
+                <p>Ícone R: <span class="textIcon_template right"></span>.</p>
+                <p>Ícone R: <span class="textIcon_template right">Yes</span>.</p>
+                <!-- <p>Ícone R: <span class="textIcon_template right noText"></span>.</p> -->
+                <p>Ícone R: <span class="textIcon_template right noText">Yes</span>.</p>
+
+                <div class="lb3"></div>
+
+
+                <p class="t10"></p>
+                <p class="t4"></p>
+                <p class="t6"></p>
+                <p class="t25"></p>
+
+                <p>P: <span id="tt">S</span>.</p>
+
+                <p>Ícone L: <span class="textIcon_table"></span>.</p>
+                <p>Ícone L: <span class="textIcon_image">Yes</span>.</p>
+                <!-- <p>Ícone L: <span class="textIcon_template noText"></span>.</p> -->
+                <p>Ícone L: <span class="textIcon_yes noText">Yes</span>.</p>
+
+                <p>Números: <span class="textIcon_yes"></span></p>
+                <p>Números: <span class="textIcon_yes noText">Yes</span></p>
                 
+
+                <h2>► Ícone Do H2</h2> 
+
+                <h2>▼ Ícone Do H2</h2> 
+
+                <p>Ok.</p>
+
+
+
+
+
+
+
+
+
+
+
 
                 <h2>Fonts</h2>
 
@@ -299,49 +355,6 @@ font-size: 43px;
                 <h3>Minhas Fontes</h3>
 
                 <h4>Nome Da Fonte Futurista</h4>
-
-                <p class="t10"></p>
-                <p class="t4"></p>
-                <p class="t6"></p>
-                <p class="t25"></p>
-
-
-
-                <p>P: <span id="tt">S</span>.</p>
-
-
-
-
-
-                <p>Ícone L: <span class="textIcon_table"></span>.</p>
-                <p>Ícone L: <span class="textIcon_image">Yes</span>.</p>
-                <!-- <p>Ícone L: <span class="textIcon_template noText"></span>.</p> -->
-                <p>Ícone L: <span class="textIcon_yes noText">Yes</span>.</p>
-
-                <p>Números: <span class="textIcon_yes"></span></p>
-                <p>Números: <span class="textIcon_yes noText">Yes</span></p>
-
-
-                <p>Texto de ícone (o lado padrão é o esquerdo):</p>
-
-                <p>Ícone L: <span class="textIcon_template"></span>.</p>
-                <p>Ícone L: <span class="textIcon_template">Yes</span>.</p>
-                <!-- <p>Ícone L: <span class="textIcon_template noText"></span>.</p> -->
-                <p>Ícone L: <span class="textIcon_template noText">Yes</span>.</p>
-
-                <p>Texto de ícone pro lado esquerdo:</p>
-
-                <p>Ícone L: <span class="textIcon_template_left"></span>.</p>
-                <p>Ícone L: <span class="textIcon_template_left">Yes</span>.</p>
-                <!-- <p>Ícone L: <span class="textIcon_template_left noText"></span>.</p> -->
-                <p>Ícone L: <span class="textIcon_template_left noText">Yes</span>.</p>
-
-                <p>Texto de ícone pro lado direito:</p>
-
-                <p>Ícone R: <span class="textIcon_template_right"></span>.</p>
-                <p>Ícone R: <span class="textIcon_template_right">Yes</span>.</p>
-                <!-- <p>Ícone R: <span class="textIcon_template_right noText"></span>.</p> -->
-                <p>Ícone R: <span class="textIcon_template_right noText">Yes</span>.</p>
 
                 <p>Principais características:</p>
 
